Fixed padding on mobile, tablet, desktop

--- a/src/css/testimonials.css
+++ b/src/css/testimonials.css
@@ -1,5 +1,5 @@
 .testimonials {
-  padding: 80px 0;
+  padding: 40px 0 80px 0;
 }
 .testimonial-2 {
   display: none;
@@ -35,7 +35,7 @@
 }
 @media (min-width: 768px) {
   .testimonials {
-    padding: 100px 0;
+    padding: 50px 0 100px 0;
   }
   .testimonial-2 {
     display: block;
@@ -47,7 +47,7 @@
 }
 @media (min-width: 1280px) {
   .testimonials {
-    padding: 150px 0;
+    padding: 75px 0 150px 0;
   }
   .testimonial-3 {
     display: block;
